# backend

./: .dockerignore  .env  .gitignore  =12.3  Dockerfile  Quran_Sowar.db  cli.py  dependencies.txt  download.py  pyproject.toml  railway.toml  requirements.txt  slim.report.json  socketio_test_client.py  vercel.json
audio2text/: audio2text.ipynb
models/embeddings/: config.json  tokenizer_config.json
src/: constants.py  main.py  requirements.txt  server.py  socket_client.py  test_client.py
src/controllers/: auth_controller.py  chat_controller.py  router.py  socket_controller.py  supabase_controller.py  tajweed_controller.py
src/db/: collections.py  context.py  mongo_client.py  supabase.py
src/faissEmbedding/: app.py  chat_memory.py  embeddings_manager.py
src/middleware/: auth_middleware.py
src/models/: Base.py  Messages.py  Users.py  dto.py  tajweed_session.py
src/repos/: base_repository.py  chat_repository.py  tajweed_session_repository.py  user_repository.py
src/services/: __init__.py  chat_service.py  jwt_service.py  service_container.py  session_service.py  tajweed_session_service.py  user_service.py
src/utils/: OAuth2.py  dependencies.py  formating.py  startup.py  tajweed_score.py  tajweed_utils.py  token.py
src/utils/quran_index/: _MAIN_1.toc
tafasir_quran_faiss_vectorstore/: index.faiss  index.pkl
tajweed/: TajweedAudioSegmenter.py  main.py
